--- a/styles/global.css
+++ b/styles/global.css
@@ -4,10 +4,18 @@
   box-sizing: border-box;
 }
 
+
+html {
+  scroll-behavior: smooth;
+}
+
+
 body {
   width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
+  font-size: 18px;
+   font-weight: normal;
 }
 
 h1,
@@ -27,10 +35,12 @@ blockquote {
 
 a {
   color: inherit;
+  text-underline-offset: 4px;
 }
 
 img {
   width: 100%;
+  height: 100%;;
 }
 
 button {
