--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,279 @@
 /* место для вашего кода */
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+justify-content: space-between;
+  padding: 92px 50px 96px;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 32px;
+}
+
+.header__links-list-item {
+  text-transform: lowercase;
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  width: 129.11px;
+  height: 104.65px;
+}
+
+.header__logo-image {
+  display: block;
+}
+
+.address {
+  line-height: 135%;
+  font-style: normal;
+}
+
+.header__address {
+  max-width: 240px;
+  justify-self: end;
+}
+
+.cover {
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 165px 50px 50px;
+  min-height: 757px;
+  position: relative;
+  z-index: 0;
+}
+
+.overlay {
+  position: absolute;
+  opacity: 0.6;
+  background: #000;
+  z-index: 1;
+  inset: 0;
+}
+
+.cover__title {
+  color: #fff;
+  font-size: 100px;
+  font-weight: bold;
+  line-height: 115%;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 1;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_center {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.cover__description {
+  margin-top: 106px;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
+}
+
+.cover__description-text {
+  color: #fff;
+  font-size: 22px;
+  line-height: 127.273%;
+  text-transform: uppercase;
+  word-spacing: 19px;
+  align-self: center;
+}
+
+.bet-button {
+  background-color: transparent;
+  color: white;
+  font-size: 22px;
+  text-transform: uppercase;
+  border: 1px solid #fff;
+  padding: 12px 32px 11px 31px;
+}
+
+.lots {
+  margin: 180px 0 120px;
+  padding: 0 24px;
+}
+
+.lots__heading {
+  font-size: 40px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding-left: 40px;
+}
+
+.lots__card-list {
+  list-style: none;
+  display: flex;
+  gap: 25px;
+  margin: 27px 0 30px;
+  flex-wrap: wrap;
+}
+
+.lots__card-list-item {
+  flex: 0 0 334px;
+  min-height: 596px;
+}
+
+.card-link {
+  height: 100%;
+  text-decoration: none;
+  display: block;
+}
+
+.card {
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 48px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  z-index: 0;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+  color: #fff;
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 120%;
+  text-decoration: underline;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 1;
+}
+
+.card__text {
+  color: #fff;
+  font-size: 20px;
+  line-height: 120%;
+  position: relative;
+  z-index: 1;
+}
+
+.lots__look-more-link {
+  text-transform: lowercase;
+  padding-left: 40px;
+  font-size: 20px;
+}
+
+.about {
+  padding: 35px 24px 0;
+}
+
+.about__column {
+  display: grid;
+  gap: 8px 25px;
+  grid-template-columns: 334px 1fr;
+  grid-template-rows: repeat(2 auto);
+  align-content: center;
+  justify-content: center;
+}
+
+.about__logo {
+  width: 240px;
+  height: 240px;
+  background-color: #000;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-self: center;
+  align-self: top;
+  grid-row: 1/2;
+  grid-column: 1/2;
+}
+
+.about__logo-image {
+  width: 148px;
+}
+
+.about__title {
+  font-size: 40px;
+  font-weight: bold;
+  text-transform: uppercase;
+  align-self: center;
+  grid-row: 1/2;
+  grid-column: 2/3;
+}
+
+.about__text {
+  font-size: 20px;
+  line-height: 120%;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  grid-row: 2/3;
+  grid-column: 2/3;
+}
+
+.footer {
+  margin-top: 180px;
+  padding: 0 50px 82px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: space-between;
+}
+
+.footer__address {
+  max-width: 265px;
+
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  align-items: center;
+}
+
+
+.footer__social-list {
+    list-style: none;
+    display: flex;
+    gap: 48px;
+      justify-self: end;
+      align-items: start;
+}
+
+
+.footer__social-icon {
+    width: 48px;
+}
